Update generate_job_stage0.groovy